--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@
 }
 #root{
   width: 100%;
-  overflow-y: hidden;
 }
 
 a {
@@ -31,6 +30,7 @@ body {
   display: flex;
   place-items: center;
   width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
